// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Timeline Default 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c6 {
  margin-right: 8px;
  background-color: transparent;
}

.c13 {
  color: #282823;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #BCBCB6;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  fill: #00D200;
}

.c24 {
  fill: #FFF;
}

.c22 {
  fill: #FFF;
}

.c21 {
  fill: #FF1900;
}

.c18 {
  fill: #FFFFFF;
}

.c16 {
  fill: #FFFFFF;
}

.c12 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  z-index: 2;
}

.c1 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c5 {
  width: 100%;
}

.c10 {
  width: 100%;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
}

.c3:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c3::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
}

.c3:first-child::before {
  content: none;
}

.c3::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
  bottom: 0;
}

.c3:last-child::after {
  content: none;
}

.c15 {
  position: relative;
}

.c15:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c15::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
}

.c15:first-child::before {
  content: none;
}

.c15::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
  bottom: 0;
}

.c15:last-child::after {
  content: none;
}

.c19 {
  position: relative;
}

.c19:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c19::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
}

.c19:first-child::before {
  content: none;
}

.c19::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
  bottom: 0;
}

.c19:last-child::after {
  content: none;
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className="c2 c3"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              fillRule="evenodd"
              r="12"
            />
          </svg>
        </div>
        <div
          className="c9 c10"
        >
          <div
            className="c11"
          >
            <span
              className="c12"
            >
              <span
                className="c13"
              >
                <time>
                  Sat, Feb 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c14"
            >
              Nothing
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c15"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 20 20"
          >
            <path
              className="c16"
              d="M10 20C4.4771525 20 0 15.5228475 0 10S4.4771525 0 10 0s10 4.4771525 10 10-4.4771525 10-10 10z"
            />
            <path
              d="M10 0c5.5228475 0 10 4.4771525 10 10s-4.4771525 10-10 10S0 15.5228475 0 10 4.4771525 0 10 0zm0 8c-1.1045695 0-2 .8954305-2 2s.8954305 2 2 2 2-.8954305 2-2-.8954305-2-2-2zM4 8c-1.1045695 0-2 .8954305-2 2s.8954305 2 2 2 2-.8954305 2-2-.8954305-2-2-2zm12 0c-1.1045695 0-2 .8954305-2 2s.8954305 2 2 2 2-.8954305 2-2-.8954305-2-2-2z"
            />
          </svg>
        </div>
        <div
          className="c9 c10"
        >
          <div
            className="c11"
          >
            <span
              className="c12"
            >
              <span
                className="c13"
              >
                <time>
                  Sun, Mar 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c14"
            >
              Waiting for information
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c3"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c17"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 20 20"
          >
            <path
              d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
            />
            <polygon
              className="c18"
              points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
            />
          </svg>
        </div>
        <div
          className="c9 c10"
        >
          <div
            className="c11"
          >
            <span
              className="c12"
            >
              <span
                className="c13"
              >
                <time>
                  Sun, Mar 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c14"
            >
              Old
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c19"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c20"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <polygon
                className="c21"
                points="16.8 0 24 7.2 24 16.8 16.8 24 7.2 24 0 16.8 0 7.2 7.2 0"
              />
              <path
                className="c22"
                d="M13,17 L13,19 L11,19 L11,17 L13,17 Z M13,5 L13,15 L11,15 L11,5 L13,5 Z"
              />
            </g>
          </svg>
        </div>
        <div
          className="c9 c10"
        >
          <div
            className="c11"
          >
            <span
              className="c12"
            >
              <span
                className="c13"
              >
                <time>
                  Wed, Apr 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c14"
            >
              Kinda new
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c15"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c20"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                className="c23"
                d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
              />
              <path
                className="c24"
                d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
              />
            </g>
          </svg>
        </div>
        <div
          className="c9 c10"
        >
          <div
            className="c11"
          >
            <span
              className="c12"
            >
              <span
                className="c13"
              >
                <time>
                  Fri, Jul 3, 2020
                </time>
              </span>
            </span>
            <span
              className="c14"
            >
              Newest
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Molecules / Timeline Different Heights 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c6 {
  margin-right: 8px;
  background-color: transparent;
}

.c16 {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: transparent;
}

.c21 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c26 {
  padding-top: 12px;
  padding-bottom: 12px;
  background-color: transparent;
}

.c14 {
  color: #282823;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c23 {
  fill: #00D200;
}

.c24 {
  fill: #FFF;
}

.c20 {
  fill: #FFF;
}

.c19 {
  fill: #FF1900;
}

.c9 {
  fill: #FFFFFF;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  z-index: 2;
}

.c1 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c5 {
  width: 100%;
}

.c11 {
  width: 100%;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
}

.c3:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c3::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
}

.c3:first-child::before {
  content: none;
}

.c3::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
  bottom: 0;
}

.c3:last-child::after {
  content: none;
}

.c17 {
  position: relative;
}

.c17:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c17::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
}

.c17:first-child::before {
  content: none;
}

.c17::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
  bottom: 0;
}

.c17:last-child::after {
  content: none;
}

.c22 {
  position: relative;
}

.c22:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c22::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
}

.c22:first-child::before {
  content: none;
}

.c22::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
  bottom: 0;
}

.c22:last-child::after {
  content: none;
}

.c25 {
  position: relative;
}

.c25:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c25::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
}

.c25:first-child::before {
  content: none;
}

.c25::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
  bottom: 0;
}

.c25:last-child::after {
  content: none;
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className="c2 c3"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 20 20"
          >
            <path
              d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
            />
            <polygon
              className="c9"
              points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
            />
          </svg>
        </div>
        <div
          className="c10 c11"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              <span
                className="c14"
              >
                <time>
                  Wed, Jan 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c15"
            >
              <div
                className="c16"
              >
                Oldest
              </div>
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c17"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c18"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <polygon
                className="c19"
                points="16.8 0 24 7.2 24 16.8 16.8 24 7.2 24 0 16.8 0 7.2 7.2 0"
              />
              <path
                className="c20"
                d="M13,17 L13,19 L11,19 L11,17 L13,17 Z M13,5 L13,15 L11,15 L11,5 L13,5 Z"
              />
            </g>
          </svg>
        </div>
        <div
          className="c10 c11"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              <span
                className="c14"
              >
                <time>
                  Sat, Feb 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c15"
            >
              <div
                className="c21"
              >
                Kinda old
              </div>
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c22"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c18"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                className="c23"
                d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
              />
              <path
                className="c24"
                d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
              />
            </g>
          </svg>
        </div>
        <div
          className="c10 c11"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              <span
                className="c14"
              >
                <time>
                  Wed, Apr 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c15"
            >
              Kinda new
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c25"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c18"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                className="c23"
                d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
              />
              <path
                className="c24"
                d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
              />
            </g>
          </svg>
        </div>
        <div
          className="c10 c11"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              <span
                className="c14"
              >
                <time>
                  Fri, Jul 3, 2020
                </time>
              </span>
            </span>
            <span
              className="c15"
            >
              <div
                className="c26"
              >
                Newest
              </div>
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Molecules / Timeline Single Element 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c6 {
  margin-right: 8px;
  background-color: transparent;
}

.c15 {
  color: #282823;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c9 {
  fill: #00D200;
}

.c10 {
  fill: #FFF;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c7 {
  z-index: 2;
}

.c1 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c5 {
  width: 100%;
}

.c12 {
  width: 100%;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
}

.c3:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c3::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
}

.c3:first-child::before {
  content: none;
}

.c3::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
  bottom: 0;
}

.c3:last-child::after {
  content: none;
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className="c2 c3"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                className="c9"
                d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
              />
              <path
                className="c10"
                d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
              />
            </g>
          </svg>
        </div>
        <div
          className="c11 c12"
        >
          <div
            className="c13"
          >
            <span
              className="c14"
            >
              <span
                className="c15"
              >
                <time>
                  Fri, Jul 3, 2020
                </time>
              </span>
            </span>
            <span
              className="c16"
            >
              Single element. So lonely 😭
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Molecules / Timeline With Button 1`] = `
.c0 {
  padding-left: 40px;
  padding-right: 40px;
  background-color: transparent;
}

.c6 {
  margin-right: 8px;
  background-color: transparent;
}

.c16 {
  margin-left: auto;
  background-color: transparent;
}

.c14 {
  color: #282823;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: block;
}

.c8 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #0046FF;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c20 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c21 {
  fill: #00D200;
}

.c22 {
  fill: #FFF;
}

.c9 {
  fill: #FFFFFF;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

.c15 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c17 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #336BFF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c17,
.c17[type='button'],
.c17[type='reset'],
.c17[type='submit'] {
  -webkit-appearance: button;
}

.c17::-moz-focus-inner,
.c17[type='button']::-moz-focus-inner,
.c17[type='reset']::-moz-focus-inner,
.c17[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c17:-moz-focusring,
.c17[type='button']:-moz-focusring,
.c17[type='reset']:-moz-focusring,
.c17[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c17::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c17:hover {
  background-color: #2650BF;
}

.c17:active {
  background-color: #1F4099;
}

.c7 {
  z-index: 2;
}

.c1 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.c5 {
  width: 100%;
}

.c11 {
  width: 100%;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c3 {
  position: relative;
}

.c3:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c3::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
}

.c3:first-child::before {
  content: none;
}

.c3::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
  bottom: 0;
}

.c3:last-child::after {
  content: none;
}

.c19 {
  position: relative;
}

.c19:not(:last-of-type) > div > div:nth-child(2) {
  border-bottom: 1px solid #EBEBE8;
}

.c19::before {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #BCBCB6;
}

.c19:first-child::before {
  content: none;
}

.c19::after {
  content: '';
  position: absolute;
  height: 50%;
  left: 9px;
  width: 2px;
  z-index: 1;
  background: #00D200;
  bottom: 0;
}

.c19:last-child::after {
  content: none;
}

<div
  className="c0"
>
  <ul
    className="c1"
  >
    <li
      className="c2 c3"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c8"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 20 20"
          >
            <path
              d="M10,20 C4.4771525,20 0,15.5228475 0,10 C0,4.4771525 4.4771525,0 10,0 C15.5228475,0 20,4.4771525 20,10 C20,15.5228475 15.5228475,20 10,20 Z"
            />
            <polygon
              className="c9"
              points="11 8 11 16 9 16 9 8 11 8 11 4 11 6 9 6 9 4 11 4"
            />
          </svg>
        </div>
        <div
          className="c10 c11"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              <span
                className="c14"
              >
                <time>
                  Mon, Jun 1, 2020
                </time>
              </span>
            </span>
            <span
              className="c15"
            >
              Old
            </span>
          </div>
          <div
            className="c16"
          >
            <button
              className="NormalizedButton__Button-sc-ey7f5x-0 c17"
              onClick={[Function]}
              type="button"
            >
              <span>
                <span
                  className="c18"
                >
                  Click me
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      className="c2 c19"
    >
      <div
        className="c4 c5"
      >
        <div
          className="c6 c7"
        >
          <svg
            aria-hidden="true"
            className="c20"
            focusable="false"
            preserveAspectRatio="xMidYMid meet"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                className="c21"
                d="M12 23.87c6.627 0 12-5.315 12-11.87C24 5.445 18.627.13 12 .13S0 5.445 0 12c0 6.555 5.373 11.87 12 11.87z"
              />
              <path
                className="c22"
                d="M16.474 8.87l.933.927L11 16.174l-3.88-3.861.933-.928L11 14.318z"
              />
            </g>
          </svg>
        </div>
        <div
          className="c10 c11"
        >
          <div
            className="c12"
          >
            <span
              className="c13"
            >
              <span
                className="c14"
              >
                <time>
                  Fri, Jul 3, 2020
                </time>
              </span>
            </span>
            <span
              className="c15"
            >
              Newest
            </span>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
